--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -8,6 +8,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: authentik
+  labels:
+    prometheus-scrape: "true"
 ---
 apiVersion: v1
 kind: Namespace
@@ -18,6 +20,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cnpg-system
+  labels:
+    prometheus-scrape: "true"
 ---
 apiVersion: v1
 kind: Namespace
