feat(unifi): Change storageClass to longhorn

--- a/values/unifi.yaml
+++ b/values/unifi.yaml
@@ -58,7 +58,7 @@ persistence:
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  storageClass: local-path-retain
+  storageClass: longhorn
   annotations: {}
   backup:
     enabled: true
@@ -67,7 +67,7 @@ persistence:
     ## database data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
     ## If set to "-", storageClassName: "", which disables dynamic provisioning
-    storageClass: local-path-retain
+    storageClass: longhorn
     annotations: {}
 
 
