--- a/manifests/metallb/kustomization.yaml
+++ b/manifests/metallb/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: metallb-system
 resources:
-  - ipaddresspool.yaml
+  - ipaddresspool-production.yaml
+  - ipaddresspool-unifi.yaml
   - l2advertisement.yaml
