--- a/values/unifi.yaml
+++ b/values/unifi.yaml
@@ -24,8 +24,8 @@ environment:
 
 service:
   type: "LoadBalancer"
-  annotations: {}
-    # traefik.ingress.kubernetes.io/service.serversscheme: https
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 10.0.50.11
   ports:
     devicecom: 8080
     webapi: 8443
