fix(unifi): Allow shared IPs

--- a/values/unifi.yaml
+++ b/values/unifi.yaml
@@ -25,6 +25,7 @@ environment:
 service:
   type: "LoadBalancer"
   annotations:
+    metallb.universe.tf/allow-shared-ip: "unifi-shared-key"
     metallb.universe.tf/loadBalancerIPs: 10.0.50.11
   ports:
     devicecom: 8080
