feat(git): Git v2. Big changes. No more clear passwords

--- a/manifests/gitea/kustomization.yaml
+++ b/manifests/gitea/kustomization.yaml
@@ -5,3 +5,7 @@ namespace: gitea
 resources:
   - cert.yaml
   - plcnk-ca.yaml
+  - cnpg-gitea.yaml
+  - sealed-admin-creds.yaml
+  - sealed-oauth-generic.yaml
+  - sealed-redis-password.yaml
