--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -27,6 +27,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: gitea
+  labels:
+    prometheus-scrape: "true"
 ---
 apiVersion: v1
 kind: Namespace
