feat(auth): Enable monitoring

--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -10,6 +10,7 @@ metadata:
   name: authentik
   labels:
     prometheus-scrape: "true"
+    prometheus-scrape-svc: "true"
 ---
 apiVersion: v1
 kind: Namespace
