--- a/values/prometheus-stack.yaml
+++ b/values/prometheus-stack.yaml
@@ -3631,7 +3631,7 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the servicemonitors created
     ##
-    serviceMonitorSelectorNilUsesHelmValues: true
+    serviceMonitorSelectorNilUsesHelmValues: false
 
     ## ServiceMonitors to be selected for target discovery.
     ## If {}, select all ServiceMonitors
@@ -3644,11 +3644,11 @@ prometheus:
 
     ## Namespaces to be selected for ServiceMonitor discovery.
     ##
-    # serviceMonitorNamespaceSelector: {}
+    serviceMonitorNamespaceSelector: {}
     ## Example which selects ServiceMonitors in namespaces with label "prometheus" set to "somelabel"
-    serviceMonitorNamespaceSelector:
-      matchLabels:
-        prometheus-scrape-svc: "true"
+    # serviceMonitorNamespaceSelector:
+    #   matchLabels:
+    #     prometheus-scrape-svc: "true"
 
     ## If true, a nil or {} value for prometheus.prometheusSpec.podMonitorSelector will cause the
     ## prometheus resource to be created with selectors based on values in the helm deployment,
