test(monito): serviceMonitor config (please work)

--- a/values/prometheus-stack.yaml
+++ b/values/prometheus-stack.yaml
@@ -4154,11 +4154,7 @@ prometheus:
   #      - nodes/proxy
   #    verbs: [ "get", "list", "watch" ]
 
-  additionalServiceMonitors:
-    - name: "Authentik"
-      namespaceSelector:
-        matchNames:
-          - authentik
+  additionalServiceMonitors: []
   ## Name of the ServiceMonitor to create
   ##
   # - name: ""
