--- a/values/authentik.yaml
+++ b/values/authentik.yaml
@@ -44,6 +44,9 @@ server:
     enabled: true
     serviceMonitor:
       enabled: true
+      namespace: monitoring
+      labels:
+        release: prometheus-stack
 
 worker:
   replicas: 1
