--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -33,6 +33,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: homepage
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: ingress-nginx
 ---
 apiVersion: v1
