--- a/manifests/gitea/kustomization.yaml
+++ b/manifests/gitea/kustomization.yaml
@@ -3,10 +3,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: gitea
 resources:
+  - backup-cnpg.yaml
   - cert.yaml
   - plcnk-ca.yaml
   - cnpg-gitea.yaml
   - sealed-admin-creds.yaml
+  - sealed-aws-creds.yaml
   - sealed-oauth-generic.yaml
   - sealed-redis-password.yaml
   - sealed-redis-url.yaml
