--- a/manifests/gitea/cnpg-gitea.yaml
+++ b/manifests/gitea/cnpg-gitea.yaml
@@ -4,6 +4,7 @@ kind: Cluster
 metadata:
   name: cnpg-gitea
 spec:
+  imageName: ghcr.io/cloudnative-pg/postgresql:16.3
   bootstrap:
     initdb:
       database: gitea
