feat(cnpg): Increase backup frequency

--- a/manifests/gitea/backup-cnpg.yaml
+++ b/manifests/gitea/backup-cnpg.yaml
@@ -5,7 +5,7 @@ metadata:
   name: backup-cnpg-gitea
 spec:
   immediate: true
-  schedule: "0 0 2 * * 0"
+  schedule: "0 0 2 * * *"
   backupOwnerReference: self
   cluster:
     name: cnpg-gitea
