--- a/manifests/authentik/backup-cnpg.yaml
+++ b/manifests/authentik/backup-cnpg.yaml
@@ -5,7 +5,7 @@ metadata:
   name: backup-cnpg-authentik
 spec:
   immediate: true
-  schedule: "0 0 1 * * 0"
+  schedule: "0 0 1 * * *"
   backupOwnerReference: self
   cluster:
     name: cnpg-authentik
