--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -48,7 +48,7 @@ configuration:
   rebootSentinel: "/var/run/reboot-required"  # path to file whose existence signals need to reboot (default "/var/run/reboot-required")
   rebootSentinelCommand: ""     # command for which a successful run signals need to reboot (default ""). If non-empty, sentinel file will be ignored.
   rebootCommand: "/bin/systemctl reboot"  # command to run when a reboot is required by the sentinel
-  rebootDelay: "30"             # add a delay after drain finishes but before the reboot command is issued
+  rebootDelay: "60s"             # add a delay after drain finishes but before the reboot command is issued
   rebootMethod: ""              # method to use for reboots (default command), available: command, signal
   rebootSignal: ""              # signal to use for reboots (default 39 = SIGRTMIN+5).
   messageTemplateDrain: ""      # slack message template when notifying about a node being drained (default "Draining node %s")
