--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -19,7 +19,7 @@ dsAnnotations: {}
 extraArgs: {}
 
 extraEnvVars:
-- name: notifyUrl
+- name: NOTIFY_URL
   valueFrom:
     secretKeyRef:
       name: discord-webhook
@@ -49,7 +49,7 @@ configuration:
   rebootSentinelCommand: ""     # command for which a successful run signals need to reboot (default ""). If non-empty, sentinel file will be ignored.
   rebootCommand: "/bin/systemctl reboot"  # command to run when a reboot is required by the sentinel
   rebootDelay: "60s"             # add a delay after drain finishes but before the reboot command is issued
-  notifyUrl: ""                 # notification URL with the syntax as follows: https://containrrr.dev/shoutrrr/services/overview/
+  notifyUrl: "${NOTIFY_URL}"    # notification URL with the syntax as follows: https://containrrr.dev/shoutrrr/services/overview/
   rebootMethod: ""              # method to use for reboots (default command), available: command, signal
   rebootSignal: ""              # signal to use for reboots (default 39 = SIGRTMIN+5).
   messageTemplateDrain: ""      # slack message template when notifying about a node being drained (default "Draining node %s")
@@ -58,7 +58,7 @@ configuration:
   startTime: "9:00"             # only reboot after this time of day (default "0:00")
   timeZone: "Europe/Paris"      # time-zone to use (valid zones from "time" golang package)
   annotateNodes: false          # enable 'weave.works/kured-reboot-in-progress' and 'weave.works/kured-most-recent-reboot-needed' node annotations to signify kured reboot operations
-  lockReleaseDelay: 0           # hold lock after reboot by this amount of time (default 0, disabled)
+  lockReleaseDelay: 10m         # hold lock after reboot by this amount of time (default 0, disabled)
   preferNoScheduleTaint: ""     # Taint name applied during pending node reboot (to prevent receiving additional pods from other rebooting nodes). Disabled by default. Set e.g. to "weave.works/kured-node-reboot" to enable tainting.
   logFormat: "text"             # log format specified as text or json, defaults to text
   preRebootNodeLabels: []       # labels to add to nodes before cordoning (default [])
