--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -19,7 +19,7 @@ dsAnnotations: {}
 extraArgs: {}
 
 extraEnvVars:
-- name: NOTIFY_URL
+- name: notifyUrl
   valueFrom:
     secretKeyRef:
       name: discord-webhook
@@ -49,7 +49,7 @@ configuration:
   rebootSentinelCommand: ""     # command for which a successful run signals need to reboot (default ""). If non-empty, sentinel file will be ignored.
   rebootCommand: "/bin/systemctl reboot"  # command to run when a reboot is required by the sentinel
   rebootDelay: "60s"             # add a delay after drain finishes but before the reboot command is issued
-  notifyUrl: "${NOTIFY_URL}"    # notification URL with the syntax as follows: https://containrrr.dev/shoutrrr/services/overview/
+  # notifyUrl: "${NOTIFY_URL}"    # notification URL with the syntax as follows: https://containrrr.dev/shoutrrr/services/overview/
   rebootMethod: ""              # method to use for reboots (default command), available: command, signal
   rebootSignal: ""              # signal to use for reboots (default 39 = SIGRTMIN+5).
   messageTemplateDrain: ""      # slack message template when notifying about a node being drained (default "Draining node %s")
