--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -19,7 +19,7 @@ dsAnnotations: {}
 extraArgs: {}
 
 extraEnvVars:
-- name: notifyUrl
+- name: KURED_NOTIFY_URL
   valueFrom:
     secretKeyRef:
       name: discord-webhook
