--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -44,11 +44,11 @@ configuration:
   drainTimeout: ""              # timeout after which the drain is aborted (default: 0, infinite time)
   skipWaitForDeleteTimeout: ""  # when time is greater than zero, skip waiting for the pods whose deletion timestamp is older than N seconds while draining a node (default: 0)
   prometheusUrl: ""             # Prometheus instance to probe for active alerts
-  rebootDays: [fr, sa, su]        # only reboot on these days (default [su,mo,tu,we,th,fr,sa])
+  rebootDays: [fr, sa, su]      # only reboot on these days (default [su,mo,tu,we,th,fr,sa])
   rebootSentinel: "/var/run/reboot-required"  # path to file whose existence signals need to reboot (default "/var/run/reboot-required")
   rebootSentinelCommand: ""     # command for which a successful run signals need to reboot (default ""). If non-empty, sentinel file will be ignored.
   rebootCommand: "/bin/systemctl reboot"  # command to run when a reboot is required by the sentinel
-  rebootDelay: "60s"             # add a delay after drain finishes but before the reboot command is issued
+  rebootDelay: "60s"            # add a delay after drain finishes but before the reboot command is issued
   notifyUrl: ""                 # notification URL with the syntax as follows: https://containrrr.dev/shoutrrr/services/overview/
   rebootMethod: ""              # method to use for reboots (default command), available: command, signal
   rebootSignal: ""              # signal to use for reboots (default 39 = SIGRTMIN+5).
@@ -57,7 +57,7 @@ configuration:
   messageTemplateUncordon: ""   # slack message template when notifying about a node being uncordoned (default "Node %s rebooted & uncordoned successfully!")
   startTime: "9:00"             # only reboot after this time of day (default "0:00")
   timeZone: "Europe/Paris"      # time-zone to use (valid zones from "time" golang package)
-  annotateNodes: false          # enable 'weave.works/kured-reboot-in-progress' and 'weave.works/kured-most-recent-reboot-needed' node annotations to signify kured reboot operations
+  annotateNodes: true           # enable 'weave.works/kured-reboot-in-progress' and 'weave.works/kured-most-recent-reboot-needed' node annotations to signify kured reboot operations
   lockReleaseDelay: 10m         # hold lock after reboot by this amount of time (default 0, disabled)
   preferNoScheduleTaint: ""     # Taint name applied during pending node reboot (to prevent receiving additional pods from other rebooting nodes). Disabled by default. Set e.g. to "weave.works/kured-node-reboot" to enable tainting.
   logFormat: "text"             # log format specified as text or json, defaults to text
