--- a/values/kured.yaml
+++ b/values/kured.yaml
@@ -29,7 +29,7 @@ configuration:
   useRebootSentinelHostPath: true  # not actually a flag, indicates if the sentinel should be mounted
   metricsHost: ""               # host where metrics will listen
   metricsPort: 8080             # port number where metrics will listen
-  lockTtl: 0                    # force clean annotation after this amount of time (default 0, disabled)
+  lockTtl: "2h"                 # force clean annotation after this amount of time (default 0, disabled)
   alertFilterRegexp: ""         # alert names to ignore when checking for active alerts
   alertFiringOnly: false        # only consider firing alerts when checking for active alerts
   alertFilterMatchOnly: false   # Only block if the alert-filter-regexp matches active alerts
