feat(monito): Add cnpg alerts

--- a/manifests/prometheus-stack/kustomization.yaml
+++ b/manifests/prometheus-stack/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - cert-grafana.yaml
+  - cnpg-alerts.yaml
   - sealed-grafana-admin.yaml
   - sealed-oauth-generic.yaml
   - plcnk-ca.yaml
