--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -92,8 +92,11 @@ ingress:
 
 # Extra environment variables that will be pass onto deployment pods
 # Expects key: value
-env: {}
-  # GATUS_CONFIG_PATH: config/config.yaml
+env:
+  PG_USER: $__file{/mnt/pg-creds/username}
+  PG_PASSWORD: $__file{/mnt/pg-creds/password}
+  PG_HOST: $__file{/mnt/pg-creds/host}
+  PG_DBNAME: $__file{/mnt/pg-creds/dbname}
 
 # Sidecar containers in the pod
 sidecarContainers: {}
@@ -176,7 +179,7 @@ networkPolicy:
 config:
   storage:
     type: postgres
-    path: postgres://$__file{/mnt/pg-creds/username}:$__file{/mnt/pg-creds/password}@$__file{/mnt/pg-creds/host}:5432/$__file{/mnt/pg-creds/dbname}?sslmode=disable
+    path: postgres://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:5432/${PG_DBNAME}?sslmode=disable
   endpoints:
     - name: example
       url: https://example.org
