--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -177,7 +177,6 @@ config:
     discord:
       webhook-url: ${DISCORD_WEBHOOK}
       default-alert:
-        description: "Health Check Failed"
         send-on-resolved: true
         failure-threshold: 2
         success-threshold: 2
@@ -193,8 +192,110 @@ config:
       - "[STATUS] == 200"
       - "[CERTIFICATE_EXPIRATION] > 10d"
 
+  endpoint-icmp: &icmp
+    interval: 1m
+    client:
+      timeout: 10s
+      insecure: true
+    alerts:
+      - type: discord
+    conditions:
+      - "[CONNECTED] == true"
+
+  endpoint-traefik: &traefik
+    interval: 1m
+    client:
+      timeout: 10s
+      insecure: true
+    alerts:
+      - type: discord
+    conditions:
+      - "[STATUS] == 401"
+      - "[CERTIFICATE_EXPIRATION] > 10d"
+
   endpoints:
+    - name: Vaultwarden
+      <<: *default
+      url: https://vault.plcnk.net
+      group: External Services
+
+    - name: Adguard Home
+      <<: *default
+      url: https://dns.plcnk.net
+      group: Docker Services
+    - name: Portainer
+      <<: *default
+      url: https://portainer.plcnk.net
+      group: Docker Services
+    - name: Traefik
+      <<: *traefik
+      url: https://traefik.plcnk.net
+      group: Docker Services
+
+    - name: Router
+      <<: *default
+      url: https://router.plcnk.net
+      group: Home Infra
+    - name: Switch 1
+      <<: *default
+      url: https://sw1.plcnk.net
+      group: Home Infra
+    - name: Switch 2
+      <<: *default
+      url: https://sw2.plcnk.net
+      group: Home Infra
+    - name: Unifi AP
+      <<: *icmp
+      url: icmp://unifi-ap-1.plcnk.net
+      group: Home Infra
+    - name: Raspberry Pi
+      <<: *icmp
+      url: icmp://raspi.plcnk.net
+      group: Home Infra
+
+    - name: VIP
+      <<: *icmp
+      url: icmp://k3s.plcnk.home
+      group: Kube Nodes
+    - name: k3s-01
+      <<: *icmp
+      url: icmp://k3s-01.plcnk.home
+      group: Kube Nodes
+    - name: k3s-02
+      <<: *icmp
+      url: icmp://k3s-02.plcnk.home
+      group: Kube Nodes
+    - name: k3s-03
+      <<: *icmp
+      url: icmp://k3s-03.plcnk.home
+      group: Kube Nodes
+
+    - name: Authentik
+      <<: *default
+      url: https://auth.plcnk.home
+      group: Kube Infra
+    - name: Rancher
+      <<: *default
+      url: https://rancher.plcnk.home
+      group: Kube Infra
+    - name: Argo CD
+      <<: *default
+      url: https://argocd.plcnk.home
+      group: Kube Infra
+
     - name: Gitea
       <<: *default
       url: https://git.plcnk.home
-      group: DevOps
+      group: Kube Services
+    - name: Homepage
+      <<: *default
+      url: https://dash.plcnk.home
+      group: Kube Services
+    - name: Grafana
+      <<: *default
+      url: https://grafana.plcnk.home
+      group: Kube Services
+    - name: Unifi Controller
+      <<: *default
+      url: https://unifi.plcnk.home
+      group: Kube Services
