--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -56,6 +56,9 @@ securityContext:
   runAsUser: 65534
   runAsGroup: 65534
   readOnlyRootFilesystem: true
+  sysctls:
+    - name: net.ipv4.ping_group_range
+      value: 0 65536
 
 # Expose the gatus service to be accessed from outside the cluster (LoadBalancer service)
 # or access it from within the cluster (ClusterIP service). Set the service type and the port to serve it.
@@ -196,7 +199,6 @@ config:
     interval: 1m
     client:
       timeout: 10s
-      insecure: true
       dns-resolver: "tcp://10.0.1.3:53"
     alerts:
       - type: discord
