--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -216,6 +216,7 @@ config:
 
   endpoints:
     - name: DNS - External query
+      url: "10.0.1.3"
       interval: 1m
       client:
         timeout: 10s
@@ -229,6 +230,7 @@ config:
         - "[DNS_RCODE] == NOERROR"
       group: 1. DNS
     - name: DNS - Internal query
+      url: "10.0.1.3"
       interval: 1m
       client:
         timeout: 10s
