--- a/manifests/namespaces/ns.yaml
+++ b/manifests/namespaces/ns.yaml
@@ -49,6 +49,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: monitoring
+  labels:
+    prometheus-scrape: "true"
 ---
 apiVersion: v1
 kind: Namespace
