--- a/values/gatus.yaml
+++ b/values/gatus.yaml
@@ -75,7 +75,7 @@ ingress:
   ingressClassName: nginx
   # Values can be templated
   annotations:
-    gethomepage.dev/enabled: true
+    gethomepage.dev/enabled: "true"
     gethomepage.dev/name: Gatus
     gethomepage.dev/description: Status Page
     gethomepage.dev/group: Infrastructure
