feat(dash): Add ingresses to Homepage

--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -2175,7 +2175,13 @@ server:
     # -- Additional ingress annotations
     ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#option-1-ssl-passthrough
     annotations:
-      kubernetes.io/ingress.class: nginx
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/name: Argo CD
+      gethomepage.dev/description: Kube CD
+      gethomepage.dev/group: Services
+      gethomepage.dev/icon: argocd.png
+      gethomepage.dev/href: https://argocd.plcnk.home
+      gethomepage.dev/siteMonitor: https://argocd.plcnk.home
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 
