--- a/values/prometheus-stack.yaml
+++ b/values/prometheus-stack.yaml
@@ -1003,7 +1003,13 @@ grafana:
     ## Annotations for Grafana Ingress
     ##
     annotations:
-      kubernetes.io/ingress.class: nginx
+      gethomepage.dev/enabled: "true"
+      gethomepage.dev/name: Grafana
+      gethomepage.dev/description: Monitoring Dashboards
+      gethomepage.dev/group: Services
+      gethomepage.dev/icon: grafana.png
+      gethomepage.dev/href: https://grafana.plcnk.home
+      gethomepage.dev/siteMonitor: https://grafana.plcnk.home
       # kubernetes.io/tls-acme: "true"
 
     ## Labels to be added to the Ingress
