--- a/values/authentik.yaml
+++ b/values/authentik.yaml
@@ -32,6 +32,7 @@ server:
     annotations:
       gethomepage.dev/enabled: "true"
       gethomepage.dev/name: Authentik
+      gethomepage.dev/app: authentik
       gethomepage.dev/description: SSO Provider
       gethomepage.dev/group: Services
       gethomepage.dev/icon: authentik.png
