--- a/.github/linters/.yaml-lint.yaml
+++ b/.github/linters/.yaml-lint.yaml
@@ -32,4 +32,4 @@ rules:
   quoted-strings: disable
   trailing-spaces: enable
   truthy:
-    level: warning
+    allowed-values: ["true", "false", "on"]
