--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>plcnk/.github:default.json5",
+    "github>plcnk/kube-configs//.github/renovate/automerge-docker-patch.json5",
     ":semanticCommitTypeAll(chore)"
   ],
 
