--- a/.github/renovate/automerge-patch.json5
+++ b/.github/renovate/automerge-patch.json5
@@ -2,7 +2,7 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "packageRules": [
       {
-        "matchDatasources": ["docker"],
+        "matchDatasources": ["docker", "helm"],
         "automerge": true,
         "automergeType": "pr",
         "matchUpdateTypes": ["patch"],
